--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,17 @@
     <groupId>cn.com.netty</groupId>
     <artifactId>nettyLearn</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>nettyLearn Tapestry 5 Application</name>
+    <name>nettyLearn</name>
 	<properties>
         <java.version>1.8</java.version>
         <netty.version>4.1.44.Final</netty.version>
 
 	</properties>
     <repositories>
+
         <repository>
-            <id>apache-staging</id>
-            <url>https://repository.apache.org/content/repositories/staging/</url>
+            <id>ali-nexus</id>
+            <url>http://maven.aliyun.com/nexus/content/groups/public</url>
         </repository>
     </repositories>
     <dependencies>
