--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,13 @@
             <version>3.11.0</version>
         </dependency>
 
+        <!-- thrift -->
+        <dependency>
+            <groupId>org.apache.thrift</groupId>
+            <artifactId>libthrift</artifactId>
+            <version>0.13.0</version>
+        </dependency>
+
 
 
     </dependencies>
